[package]
name = "glutin-tao"
version = "0.4.0-beta.0"
authors = ["Kirill Chibisov <contact@kchibisov.com>"]
description = "Glutin bootstrapping helpers with winit"
keywords = ["windowing", "opengl", "winit"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sidit77/glutin-tao"
edition = "2021"

[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]
egl = ["glutin/egl"]
glx = ["glutin/glx", "glutin/x11", "x11"]
wgl = ["glutin/wgl"]
x11 = ["glutin/x11"]
wayland = ["glutin/wayland"]

[dependencies]
winit = { package="tao", version = "0.19", default-features = false }
glutin = { version = "0.30", default-features = false }
raw-window-handle = "0.5"

[build-dependencies]
cfg_aliases = "0.1.1"
